# dolphinRust

./: .gitignore  AGENTS.md  ATMO_CORRECTIONS_PROMPT.md  BUILD_PROMPT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  GPU_FIRSTCLASS_PROMPT.md  GPU_PROMPT.md  LICENSE  NISAR_INGEST_PROMPT.md  PLAYBOOK.md  QUALITY_LAYERS_PROMPT.md  R1_PROMPT.md  README.md  RELEASING.md  REMAINING_WORK_PROMPT.md  ROADMAP.md  SIGN_EVIDENCE_PROMPT.md  STATUS.md  TOPHU_IMPROVE_PROMPT.md  UNWRAP_STITCH_PROMPT.md  V1_PROMPT.md  VALIDATE_PROMPT.md  VALIDATION.md
.agents/skills/backlog-pipeline/: SKILL.md
.agents/skills/idea-scout/: SKILL.md
.claude/: settings.json
.claude/hooks/: rust_guard.py
.claude/skills/: backlog-pipeline  idea-scout
.claude/skills/backlog-pipeline/: SKILL.md
.claude/skills/idea-scout/: SKILL.md
.codex/: session-handoff.md
.codex/handoffs/: 2026-07-14.md
bench/: AOI_BOUNDS.md  GPU.md  PERF.md  README.md  UNWRAP.md  baseline_repro.json  bench.py  optimized_repro.json  results.json
crates/dolphin-cli/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-cli/src/: main.rs
crates/dolphin-core/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-core/src/: blocks.rs  config.rs  error.rs  lib.rs  types.rs
crates/dolphin-core/tests/: blocks_contract.rs  config_contract.rs
crates/dolphin-corrections/: CLAUDE.md  Cargo.toml
crates/dolphin-corrections/src/: apply.rs  error.rs  geometry.rs  ionosphere.rs  lib.rs  raider.rs  troposphere.rs
crates/dolphin-filtering/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-filtering/src/: fft.rs  filters.rs  lib.rs
crates/dolphin-filtering/tests/: filtering_contract.rs
crates/dolphin-ingest/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-ingest/src/: lib.rs  staging.rs
crates/dolphin-ingest/tests/: staging_contract.rs
crates/dolphin-io/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-io/src/: cslc.rs  cslc_metadata.rs  error.rs  geo.rs  geometry.rs  geotiff.rs  lib.rs  nisar.rs  nisar_fixture.rs
crates/dolphin-io/tests/: io_contract.rs  nisar_real_data.rs
crates/dolphin-phaselink/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-phaselink/examples/: gpu_bench.rs  pl_bench.rs
crates/dolphin-phaselink/src/: closure.rs  covariance.rs  crlb.rs  engine.rs  estimator.rs  fused.rs  lib.rs  phasebias.rs  quality.rs
crates/dolphin-phaselink/src/gpu/: context.rs  covariance.rs  covariance.wgsl  dispatch.rs  emi.wgsl  evd.rs  evd.wgsl  link.rs  mod.rs
crates/dolphin-phaselink/tests/: covariance_sliding_contract.rs  engine_contract.rs  fused_contract.rs  gpu_contract.rs  phaselink_contract.rs  quality_contract.rs  quality_v042_contract.rs
crates/dolphin-ps/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-ps/src/: lib.rs
crates/dolphin-ps/tests/: ps_contract.rs
crates/dolphin-shp/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-shp/src/: glrt.rs  ks.rs  lib.rs  window.rs
crates/dolphin-shp/tests/: shp_contract.rs
crates/dolphin-stack/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-stack/src/: lib.rs
crates/dolphin-stack/tests/: planner_contract.rs
crates/dolphin-timeseries/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-timeseries/src/: inversion.rs  lib.rs  network.rs  reference.rs
crates/dolphin-timeseries/tests/: timeseries_contract.rs
crates/dolphin-unwrap/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-unwrap/docs/: native_mcf_solver.md  real_burst_validation.md
crates/dolphin-unwrap/examples/: native_dense_parity.rs  real_burst_validation.rs  seam_sweep.rs  tile_parity.rs
crates/dolphin-unwrap/src/: lib.rs  native.rs  snaphu.rs  tophu.rs
crates/dolphin-unwrap/src/native/: conncomp.rs  cost.rs  mcf.rs  simplex.rs  tile.rs
crates/dolphin-unwrap/src/native/mcf/: tests.rs
crates/dolphin-unwrap/tests/: native_dense_parity.rs  native_mmx1_live_contract.rs  native_tiling_contract.rs  native_unwrap_contract.rs  tophu_bench.rs  tophu_contract.rs  unwrap_contract.rs
crates/dolphin-workflows/: CLAUDE.md  Cargo.toml  README.md
crates/dolphin-workflows/bench/: PROFILE_E2E.md
crates/dolphin-workflows/examples/: profile_e2e.rs  run_synthetic.rs  unwrap_bench.rs
crates/dolphin-workflows/src/: burst.rs  corrections.rs  crop.rs  dates.rs  displacement.rs  lib.rs  provenance.rs  sequential.rs  tiling.rs  unwrap_backend.rs
crates/dolphin-workflows/tests/: displacement_contract.rs  geometry_provenance_contract.rs  gpu_e2e_contract.rs  multiburst_contract.rs  nisar_e2e_contract.rs  nrt_displacement_contract.rs  nrt_incremental_contract.rs  sequential_contract.rs  sign_convention.rs  sign_real_data.rs  tropo_real_warp.rs  unwrap_backend_contract.rs  unwrap_parallel_contract.rs  unwrap_tiling_gate.rs
docs/: usage.md
md/design/: covariance-sliding-sum.md  geometry-provenance.md  per-pixel-los-geometry.md
md/intake/: idea-scout-ledger.md
md/plans/: gps-mmx1-aoi-harness.md  open-issues-resolution-2026-07-21.md
md/research/: gps-feasibility-spike.md  gps-ground-truth-scoping.md
oracle/: .gitignore  bench_native_unwrap.sh  bench_unwrap_throughput.sh  check_all_nan_v035.py  gen_displacement.py  gen_filtering.py  gen_io.py  gen_phaselink.py  gen_phaselink_real.py  gen_ps.py  gen_quality.py  gen_quality_v042.py  gen_seam_sweep.py  gen_sequential.py  gen_shp.py  gen_stack.py  gen_stitch_v042.py  gen_timeseries.py  gen_unwrap.py  gen_unwrap_dense.py  gen_unwrap_suite.py  prep_real_ifg.py
oracle/fixtures/: geomprov_ci_cslc.h5  geomprov_ci_data_only.h5  geomprov_ci_static.h5  unwdense_ci_conncomp.npy  unwdense_ci_corr.npy  unwdense_ci_ifg.npy  unwdense_ci_oracle.npy  unwseam_ci_conncomp.npy  unwseam_ci_corr.npy  unwseam_ci_ifg.npy  unwseam_ci_oracle.npy
validation/: .gitignore  compare.py  compare_opera.py  creds.sh  crop_real.py  fetch_real.py  gen_stack.py  gps_ground_truth.py  gps_mmx1.json  make_geomprov_fixture.py  run.sh  run_gps_ground_truth.py  run_real.sh  scan_coherence.py  velocity_scale.py
validation/tests/: test_gps_acquisition.py  test_gps_crop.py  test_gps_ground_truth.py  test_gps_runner.py
