[workspace]
resolver = "2"
members = [
    "crates/dolphin-core",
    "crates/dolphin-io",
    "crates/dolphin-phaselink",
    "crates/dolphin-shp",
    "crates/dolphin-ps",
    "crates/dolphin-stack",
    "crates/dolphin-timeseries",
    "crates/dolphin-filtering",
    "crates/dolphin-unwrap",
    "crates/dolphin-ingest",
    "crates/dolphin-workflows",
    "crates/dolphin-cli",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/morton-analytics-llc/dolphinRust"
homepage = "https://github.com/morton-analytics-llc/dolphinRust"
authors = ["Morton Analytics"]
keywords = ["insar", "sar", "interferometry", "geodesy", "remote-sensing"]
categories = ["science", "algorithms"]

[workspace.dependencies]
# Pure-Rust numerics (compile without system libs)
ndarray = "0.16"
num-complex = "0.4"
faer = "0.20"
rayon = "1.10"
rustfft = "6.2"
statrs = "0.17"
# Error / config / logging
thiserror = "2"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
# Internal crates (version pinned so the workspace is publishable)
dolphin-core = { path = "crates/dolphin-core", version = "1.0.0" }
dolphin-io = { path = "crates/dolphin-io", version = "1.0.0" }
dolphin-phaselink = { path = "crates/dolphin-phaselink", version = "1.0.0" }
dolphin-shp = { path = "crates/dolphin-shp", version = "1.0.0" }
dolphin-ps = { path = "crates/dolphin-ps", version = "1.0.0" }
dolphin-stack = { path = "crates/dolphin-stack", version = "1.0.0" }
dolphin-timeseries = { path = "crates/dolphin-timeseries", version = "1.0.0" }
dolphin-filtering = { path = "crates/dolphin-filtering", version = "1.0.0" }
dolphin-unwrap = { path = "crates/dolphin-unwrap", version = "1.0.0" }
dolphin-ingest = { path = "crates/dolphin-ingest", version = "1.0.0" }
dolphin-workflows = { path = "crates/dolphin-workflows", version = "1.0.0" }

# Enforced idiomatic-Rust standards. Each crate opts in via `[lints] workspace = true`.
# `cargo clippy --all-targets -- -D warnings` is the per-phase gate.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cognitive_complexity = "warn" # minimal branching / nesting
too_many_lines = "warn"       # small, single-purpose functions
needless_range_loop = "warn"  # iterator chains over manual index loops

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
