[package]
name = "dolphin-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared types, look geometry, block tiling, and config tree for the dolphinRust InSAR displacement pipeline."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
ndarray.workspace = true
num-complex.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
chrono.workspace = true

[lints]
workspace = true
