[package]
name = "dolphin-filtering"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
rustfft.workspace = true
rayon.workspace = true

[lints]
workspace = true
