[package]
name = "dolphin-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Off by default: local-path callers pull no async/runtime deps.
default = []
s3 = ["dep:object_store", "dep:tokio", "dep:futures"]

[dependencies]
dolphin-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
# Concurrent S3 read-staging (read-only; never writes raw data to S3).
object_store = { version = "0.11", features = ["aws"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
futures = { version = "0.3", optional = true }

[lints]
workspace = true
