[package]
name = "dolphin-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
thiserror.workspace = true
# NOTE: `gdal` and `hdf5` crates require system GDAL/HDF5 libraries and are
# added during Phase 8 (see PLAYBOOK.md). Kept out of the scaffold so the
# workspace builds without system deps.

[lints]
workspace = true
