[package]
name = "dolphin-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GeoTIFF/COG and OPERA CSLC HDF5 I/O for the dolphinRust InSAR displacement pipeline."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
thiserror.workspace = true
# System-lib bindings (Phase 8). gdal 0.19 builds against system GDAL 3.12;
# hdf5-metno (maintained fork) builds against HDF5 2.x where the old `hdf5`
# crate (0.8) cannot. See PLAYBOOK.md / memory build-env-preflight.
gdal = "0.19"
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["complex"] }

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }

[lints]
workspace = true
