[package]
name = "dolphin-phaselink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Covariance estimation, EVD/EMI phase linking, and quality layers for dolphinRust."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
faer.workspace = true
rayon.workspace = true

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }

[lints]
workspace = true
