[package]
name = "dolphin-phaselink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Covariance estimation, EVD/EMI phase linking, and quality layers for dolphinRust."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
num-complex.workspace = true
faer.workspace = true
rayon.workspace = true
tracing.workspace = true
# GPU phase-linking path — wgpu/Metal, behind the `gpu` feature (on by default).
wgpu = { version = "29", optional = true }
pollster = { version = "0.4", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }

[features]
# GPU is first-class: compiled into the default build. The CPU (faer, f64) path
# stays the correctness reference and the automatic fallback. Build `--no-default-features`
# (alias `no-gpu`) for hosts that cannot link wgpu — the API is unchanged, CPU-only.
default = ["gpu"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck"]
no-gpu = []

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }

[[example]]
name = "gpu_bench"
required-features = ["gpu"]

[lints]
workspace = true
