[package]
name = "dolphin-shp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
rayon.workspace = true
statrs.workspace = true

[dev-dependencies]
dolphin-phaselink.workspace = true
num-complex.workspace = true
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }

[lints]
workspace = true
