[package]
name = "dolphin-shp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Statistically-homogeneous-pixel (SHP) selection for the dolphinRust InSAR pipeline."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
rayon.workspace = true
statrs.workspace = true

[dev-dependencies]
dolphin-phaselink.workspace = true
num-complex.workspace = true
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }

[lints]
workspace = true
