[package]
name = "dolphin-stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dolphin-core.workspace = true
chrono.workspace = true

[dev-dependencies]
ndarray.workspace = true
ndarray-npy = { version = "0.9", default-features = false }

[lints]
workspace = true
