[package]
name = "dolphin-stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Ministack planning and sequential phase-linking sequencing for dolphinRust."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
chrono.workspace = true

[dev-dependencies]
ndarray.workspace = true
ndarray-npy = { version = "0.9", default-features = false }

[lints]
workspace = true
