[package]
name = "dolphin-timeseries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
faer.workspace = true
rayon.workspace = true

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false }

[lints]
workspace = true
