[package]
name = "dolphin-timeseries"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "SBAS L1/L2 network inversion and linear velocity estimation for dolphinRust."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
ndarray.workspace = true
faer.workspace = true
rayon.workspace = true

[dev-dependencies]
ndarray-npy = { version = "0.9", default-features = false }

[lints]
workspace = true
