[package]
name = "dolphin-workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
dolphin-core.workspace = true
dolphin-io.workspace = true
dolphin-phaselink.workspace = true
dolphin-shp.workspace = true
dolphin-ps.workspace = true
dolphin-stack.workspace = true
dolphin-timeseries.workspace = true
dolphin-filtering.workspace = true
dolphin-unwrap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
rayon.workspace = true
ndarray.workspace = true
chrono.workspace = true

[dev-dependencies]
num-complex.workspace = true
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }

[lints]
workspace = true
