[package]
name = "dolphin-workflows"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "End-to-end displacement pipeline orchestration for dolphinRust (the library entry point)."
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[dependencies]
dolphin-core.workspace = true
dolphin-io.workspace = true
dolphin-phaselink.workspace = true
dolphin-shp.workspace = true
dolphin-ps.workspace = true
dolphin-stack.workspace = true
dolphin-timeseries.workspace = true
dolphin-filtering.workspace = true
dolphin-unwrap.workspace = true
serde.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
tracing.workspace = true
rayon.workspace = true
ndarray.workspace = true
chrono.workspace = true

[features]
# GPU first-class by default; `--no-default-features --features no-gpu` for CPU-only hosts.
default = ["gpu"]
gpu = ["dolphin-phaselink/gpu"]
no-gpu = ["dolphin-phaselink/no-gpu"]

[dev-dependencies]
num-complex.workspace = true
ndarray-npy = { version = "0.9", default-features = false, features = ["num-complex-0_4"] }
hdf5 = { package = "hdf5-metno", version = "0.12", features = ["complex"] }

[[example]]
name = "run_synthetic"
path = "examples/run_synthetic.rs"

[lints]
workspace = true
